Changelog 0.3.50 [20230313]:
- Added New Setting "Dialog Theme"
- Added 2 New Themes for Skip Intro, Playing Next Dialog

Changelog 0.3.49 [20230310]:
- Fixed mal and kitsu token refresh

Changelog 0.3.48 [20230310]:
- Fixed crash on 9anime streams

Changelog 0.3.47 [20230310]:
- Made Nya Alt easier for Verizon Users
- Added New Setting "Preferred Subtitle Language"
- Renamed "Preferred Audio Stream"
- Renamed "Preferred Stream Source"

Changelog 0.3.46 [20230309]:
- Added connection to the tile in find relation and linting
- Added some fixes
- Fixed Skip Outro

Changelog 0.3.45 [20230309]:
- Added Aniskip

Changelog 0.3.44 [20230308]:
- cleanup html tags in description
- fixed next page in recommendations

Changelog 0.3.43 [20230308]:
- Added Context Menu "Find Recommendations"
- Added Context Menu "Find Relations"
- Renamed "Find Similar"

Changelog 0.3.42 [20230305]:
- re-added "Find Similar" to the context menu

Changelog 0.3.41 [20230303]:
- Renamed Preferred Source

Changelog 0.3.40 [20230302]:
- Improved Teritary Sort Preferences setting
- Added Subs Teritary Sort Preferences
- Renamed Filter Sub and Dubs

Changelog 0.3.39 [20230302]:
- Moved Enable Teritary Dub Sort Preferences

Changelog 0.3.38 [20230301]:
- Disable Nyaa properly based on settings

Changelog 0.3.37 [20230301]:
- Added New Setting "Disable Scraping Screen Fanart" 
- Added New Setting "Disable Scraping Screen Clearlogo"

Changelog 0.3.36 [20230228]:
- Add Nyaa provider

Changelog 0.3.35 [20230228]:
- Add 9anime provider

Changelog 0.3.34 [20230226]:
- Fix simkl fallback

Changelog 0.3.33 [20230224]:
- Added GogoHD Dub Sources

Changelog 0.3.32 [20230224]:
- Added GogoHD Sources

Changelog 0.3.31 [20230223]:
- Fixed Setting Types

Changelog 0.3.30 [20230223]:
- Updated The News

Changelog 0.3.29 [20230223]:
- Added New Duration Setting for Intro Dialog

Changelog 0.3.28 [20230221]:
- Fix zoro subtitles not displaying correctly

Changelog 0.3.27 [20230218]:
- Changed a few default settings
