@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.50">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.51">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,9 +25,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.50 [20230313]:
-- Added New Setting "Dialog Theme"
-- Added 2 New Themes for Skip Intro, Playing Next Dialog
+Changelog 0.3.51 [20230314]:
+- Fixed a major bug with the Playing Next Dialog
     </news>
   </extension>
 </addon>
